<resources>
    <string name="app_name">Vala</string>

    <string name="general_error_message">An error as occurred</string>

    <!-- welcome screen -->
    <string name="welcome_text">The best way to send money\nto people you love</string>
    <string name="welcome_login_btn">Login</string>
    <string name="welcome_signup_btn">Sign up</string>

    <!-- login screen -->
    <string name="login_title">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_forgot_password">Forgot your password?</string>

    <!-- signup screen -->
    <string name="signup_title">Sign-up</string>
    <string name="signup_first_name">First name</string>
    <string name="signup_last_name">Last name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_phone">Phone</string>
    <string name="signup_country">Country of residence</string>
    <string name="signup_btn">Continue</string>
    <string name="signup_country_error">Please select a country</string>
    <string name="signup_photo_error">Please take a photo</string>
    <string-array name="countries_array">
        <item>India</item>
        <item>Israel</item>
        <item>Nepal</item>
        <item>Philippines</item>
        <item>UK</item>
        <item>US</item>
    </string-array>

    <!-- add pin code screen -->
    <string name="pin_header">Secure your account</string>
    <string name="pin_btn">Get started</string>
    <string name="pin_text">Please type a 4 digits pin code\n to secure your account and\n future transactions</string>
    <string name="pin_error">Please type a 4 digits pin code</string>

    <!-- home screen -->
    <string name="home_name">Hi %1$s,</string>
    <string name="home_balance">Your balance is:</string>
    <string name="home_collect_btn">Collect</string>
    <string name="home_send_btn">Send</string>
    <string name="home_location_disabled_msg">Please turn on location services\n in order to collect your money</string>


    <!-- send screen -->
    <string name="send_name">Hi %1$s,</string>
    <string name="send_send">send:</string>
    <string name="send_amount">Amount</string>
    <string name="send_to">To:</string>
    <string name="send_receiver">Select receiver</string>
    <string name="send_button">Send</string>
    <string-array name="currency_array">
        <item>USD</item>
        <item>NIS</item>
        <item>INR</item>
    </string-array>
    <string name="invite_dialog">Select Receiver</string>
    <string name="invite_my_receivers">My Receivers</string>
    <string name="invite_search_results">Search Results</string>
    <string name="invite_edit_text">Type username or e-mail</string>
    <string name="search_dialog_btn">Search user</string>
    <string name="select_dialog_btn">Select</string>
    <string name="add_receiver_dialog_btn">Add to list</string>
    <string name="cancel_dialog_btn">@android:string/cancel</string>
    <string name="send_receiver_error">Please select a receiver</string>
    <string name="send_amount_error">Please select amount to send</string>
    <string name="select_receiver_error">Please select a receiver</string>

    <!-- payment screen-->
    <string name="payment_amount">You are sending</string>
    <string name="payment_fee">You will pay %1$s as fees</string>
    <string name="payment_total">will get</string>
    <string name="payment_button">Continue to payment</string>
    <string name="payment_ok_button">Confirm</string>

    <!-- payment confirmation dialog-->
    <string name="payment_confirmation_header">Sent</string>
    <string name="payment_confirmation_top_1">Your money has been sent,</string>
    <string name="payment_confirmation_top_2">%1$s will be notified</string>
    <string name="payment_confirmation_mid">Tracking number:</string>
    <string name="payment_confirmation_bottom">You can review this info\n from the home screen</string>
    <string name="payment_confirmation_button">Back to home</string>

    <!-- pickup location screen-->
    <string name="pickup_collect">Collect</string>
    <string name="pickup_reserve">I\'m here</string>
    <string name="pickup_amount">%1$s is waiting for you</string>

    <!-- collect screen-->
    <string name="collect_header">Collect</string>
    <string name="collect_1">We are reserving</string>
    <string name="collect_2">for you at %1$s</string>
    <string name="collect_3">Please arrive in the next 5 hours \n to get your cash</string>
    <string name="collect_btn_ok">@android:string/ok</string>
    <string name="collect_btn_cancel">@android:string/cancel</string>

    <!-- pickup confirmation screen-->
    <string name="pickup_confirmation_header">Show this to affiliate</string>
    <string name="pickup_confirmation_ok_btn">I got my money</string>
    <string name="pickup_confirmation_problem_btn">I have a problem</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_edit">Edit account details</string>
    <string name="navigation_drawer_invite">Invite friends</string>
    <string name="navigation_drawer_how_it_works">How Vala works</string>
    <string name="navigation_drawer_contact">Contact support</string>
    <string name="navigation_drawer_my_transactions">My transactions</string>
    <string name="navigation_drawer_logout">Logout</string>
    <string name="action_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- my transactions -->
    <string name="my_transactions_sent">%1$s sent to %2$s</string>
    <string name="my_transactions_received">%1$s received from %2$s</string>
    <string name="my_transactions_title">My transactions</string>

</resources>
