<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_menu_share"
        android:id="@+id/headerImage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/payment_confirmation_header"
        android:id="@+id/textViewHeader" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/payment_confirmation_top_1"
        android:id="@+id/textViewTop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/payment_confirmation_top_2"
        android:id="@+id/textViewName" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_menu_share"
        android:id="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/payment_confirmation_mid"
        android:id="@+id/textViewMid" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewTrackingNumber" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/payment_confirmation_bottom"
        android:id="@+id/textViewBottom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/payment_confirmation_button"
        android:id="@+id/con_button" />
</LinearLayout>
