<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:background="@android:color/darker_gray"
    tools:context="com.vala.valaapp.activities.SendActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu_share"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_name"
            android:id="@+id/text_name"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_send"
            android:text="@string/send_send"
            android:layout_below="@id/text_name"
            android:layout_centerHorizontal="true" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/send_currency_spinner"
                android:layout_below="@id/text_send"
                android:layout_alignParentLeft="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/send_amount"
                android:id="@+id/send_receiver_editText"
                android:layout_below="@id/text_send"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To:"
                android:layout_below="@id/send_currency_spinner"
                android:layout_alignParentLeft="true"
                android:id="@+id/send_to_text" />

            <EditText
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:id="@+id/receiver_editText"
                android:layout_alignParentRight="true"
                android:hint="@string/send_receiver"
                android:layout_below="@id/send_currency_spinner"
                android:layout_toRightOf="@id/send_to_text" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        android:id="@+id/send_button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
