<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_image"
    tools:context="com.valapay.vala.activities.WelcomeActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="174dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_vala"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:fontFamily="Roboto"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#80242424">

        <Button
            android:layout_width="260dp"
            android:layout_height="51dp"
            android:text="@string/welcome_login_btn"
            android:id="@+id/login_button"
            android:layout_gravity="center"
            android:background="#00ACA3"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:layout_marginTop="70dp" />

        <Button
            android:layout_width="260dp"
            android:layout_height="51dp"
            android:text="@string/welcome_signup_btn"
            android:id="@+id/signup_button"
            android:layout_gravity="center"
            android:background="#0099DB"
            android:textColor="#FFFFFF"
            android:layout_marginTop="14dp" />
    </LinearLayout>
</LinearLayout>
