<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.valapay.vala.activities.PickupConfirmationActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewHeader"
        android:src="@drawable/ic_menu_share"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pickup_confirmation_header"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textViewHeader" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/QRCode"
        android:src="@drawable/ic_menu_share"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textViewCode" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_confirmation_ok_btn"
        android:layout_gravity="center_horizontal"
        android:id="@+id/buttonOk" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_confirmation_problem_btn"
        android:layout_gravity="center_horizontal"
        android:id="@+id/buttonProblem" />
</LinearLayout>
